<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="24dp"
            android:background="#f9f8ee">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/registro"
                android:textColor="#D4AF37"
                android:textSize="60sp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="40dp" />

            <EditText
                android:id="@+id/etNombre"
                android:background="@drawable/cuadrados"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="32dp"
                android:hint="@string/nombre"
                android:padding="12dp"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:inputType="text"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/etCorreo"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="16dp"
                android:padding="12dp"
                android:textColor="@color/black"
                android:background="@drawable/cuadrados"
                android:textColorHint="@color/black"
                android:hint="@string/correo"
                android:inputType="textEmailAddress"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/etContraseña"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="16dp"
                android:hint="@string/contraseña"
                android:textColorHint="@color/black"
                android:padding="12dp"
                android:textColor="@color/black"
                android:background="@drawable/cuadrados"
                android:inputType="textPassword"
                android:textSize="15sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/genero"
                android:textColor="#D4AF37"
                android:textSize="16sp"
                android:layout_marginTop="24dp" />

            <RadioGroup
                android:id="@+id/rgGenero"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/rbMasculino"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:text="@string/masculino"
                    />

                <RadioButton
                    android:id="@+id/rbFemenino"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:text="@string/femenino"
                    android:layout_marginStart="16dp" />
            </RadioGroup>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/categoria"
                android:textColor="#D4AF37"
                android:textSize="16sp"
                android:layout_marginTop="24dp" />

            <CheckBox
                android:id="@+id/chkPolitica"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/politica"
                android:textColor="@color/black"/>

            <CheckBox
                android:id="@+id/chkDeportes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/deporte"
                android:textColor="@color/black"/>

            <CheckBox
                android:id="@+id/chkCultura"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cultura"
                android:textColor="@color/black"/>

            <CheckBox
                android:id="@+id/chkEducacion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/educacion"
                android:textColor="@color/black"/>

            <CheckBox
                android:id="@+id/chkSalud"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/salud"
                android:textColor="@color/black"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/provincias"
                android:textColor="#D4AF37"
                android:textSize="16sp"
                android:layout_marginTop="24dp" />

            <Spinner
                android:id="@+id/spnProvincias"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"/>


            <TextView
                android:id="@+id/tvFotoTitulo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Foto de perfil"
                android:textSize="16sp"
                android:layout_marginTop="16dp"/>

            <FrameLayout
                android:id="@+id/frameFoto"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/border_image">

                <ImageView
                    android:id="@+id/ivFoto"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    android:background="@drawable/rounded_image"
                    android:clipToOutline="true"/>

                <ImageButton
                    android:id="@+id/btnEliminarFoto"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_gravity="top|end"
                    android:background="@android:color/transparent"
                    android:src="@android:drawable/ic_menu_close_clear_cancel"
                    android:contentDescription="Eliminar foto"
                    android:visibility="gone"/>
            </FrameLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="8dp">

                <Button
                    android:id="@+id/btnTomarFoto"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Tomar foto"/>

                <Button
                    android:id="@+id/btnCargarFoto"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:text="Cargar desde galería"/>
            </LinearLayout>

            <Button
                android:id="@+id/btnRegistro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/registrar"
                android:layout_marginTop="24dp"
                android:backgroundTint="#ff4a1c"
                app:cornerRadius="12dp"
                android:textColor="#FFFFFF"/>


            <Button
                android:id="@+id/btnLimpiar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/limpiar"
                android:layout_marginTop="12dp"
                android:backgroundTint="#ff4a1c"
                app:cornerRadius="12dp"
                android:textColor="#FFFFFF"/>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardResultado"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:visibility="gone"
                app:cardCornerRadius="12dp"
                app:cardElevation="8dp">

                <TextView
                    android:id="@+id/tvResultado"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/mostrar_datos"
                    android:textSize="16sp"
                    android:padding="16dp" />
            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </ScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>